@@ -15,6 +15,9 @@
 #	logfile      - What file to read in logdir
 #
 # $Log$
+# Revision 1.8  2005/01/25 20:23:36  jimmyo
+# Improved graph_title of generic/postfix_* (Deb#292083).
+#
 # Revision 1.7  2005/01/24 19:43:26  jimmyo
 # Changed default log for generic/postfix_mailstats from syslog to mail.log. Downgraded it from auto to manual.
 #
@@ -170,7 +173,7 @@ $pos = $startsize;
 
 if ( $ARGV[0] and $ARGV[0] eq "config" )
 {
-    print "graph_title Postfix mail throughput\n";
+    print "graph_title Postfix message throughput\n";
     print "graph_args --base 1000 -l 0\n";
     print "graph_vlabel mails / \${graph_period}\n";
     print "graph_scale  no\n";
