@@ -15,6 +15,9 @@
 #	logfile      - What file to read in logdir
 #
 # $Log$
+# Revision 1.7  2005/01/25 20:23:37  jimmyo
+# Improved graph_title of generic/postfix_* (Deb#292083).
+#
 # Revision 1.6  2004/12/10 18:51:43  jimmyo
 # linux/apt* has been forced to LANG=C, to get predictable output.
 #
@@ -153,7 +156,7 @@ $pos = $startsize;
 
 if ( $ARGV[0] and $ARGV[0] eq "config" )
 {
-    print "graph_title Postfix mail throughput\n";
+    print "graph_title Postfix bytes throughput\n";
     print "graph_args --base 1000 -l 0\n";
     print "graph_vlabel bytes / \${graph_period}\n";
     print "graph_scale  no\n";
